--- a/src/index.html
+++ b/src/index.html
@@ -14,20 +14,6 @@
     <script src="https://unpkg.com/react@16.8.4/umd/react.development.js"></script>
 <!--    loads react dom library-->
     <script src="https://unpkg.com/react-dom@16.8.4/umd/react-dom.development.js"></script>
-    <script>
-        // your code is going to go here for now
-        const App = () => {
-            return React.createElement(
-                "div",
-                {},
-                React.createElement("h1", {}, "Adopt Me!")
-            )
-        };
-
-        ReactDOM.render(
-            React.createElement(App),
-            document.getElementById("root")
-        );
-    </script>
+    <script src="./App.js"></script>
 </body>
 </html>
